--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -36,6 +36,7 @@
     "com.unity.modules.video": "1.0.0",
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
-    "com.unity.modules.xr": "1.0.0"
+    "com.unity.modules.xr": "1.0.0",
+    "com.popcron.gizmos": "https://github.com/popcron/gizmos.git"
   }
 }
